Fixed cursors in the editor (#5745)
Signed-off-by: Alexander Platov <alexander.platov@hardcoreeng.com>

--- a/packages/theme/styles/prose.scss
+++ b/packages/theme/styles/prose.scss
@@ -371,3 +371,9 @@ pre.proseCodeBlock > pre.proseCode {
 }
 
 .proseHeading { line-height: 110%; }
+
+// Fixes for cursors
+.ProseMirror {
+  h1, h2, h3, p, pre, code { cursor: text; }
+  p div { cursor: auto; }
+}
